<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="launch_fragment_label">Launch Fragment</string>
    <string name="representative_fragment_label">Representative Fragment</string>
    <string name="elections_fragment_label">Elections Fragment</string>
    <string name="voter_info_fragment_label">Voter Info Fragment</string>
    <string name="upcoming_elections">Upcoming elections</string>
    <string name="saved_elections">Saved elections</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="election_information">Election Information</string>
    <string name="address_information">Address Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="ok">OK</string>
    <string name="picture">Picture</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="web_url">Web Url</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="representative_search">Representative Search</string>
    <string name="internet_message">To view this screen you must have internet access</string>
    <string name="gps_message">GPS is needed to be turned on, to get the picks political elections to you</string>
</resources>